AGUA PIATUA v2.0 - Implementación completa del sistema
 Nuevas características:
- Dashboard completo para vendedor/repartidor con gestión de pedidos
- Sistema de autenticación multi-rol (Cliente/Admin/Vendedor)
- Interfaz de cliente con carrito de compras funcional
- Página de bienvenida con navegación automática
- Estilos CSS responsive y modernos

 Mejoras técnicas:
- Eliminación de menú problemático para mejor UX
- Optimización de componentes React + Ionic
- Sistema de rutas protegidas por rol de usuario
- Integración con localStorage para persistencia

 Funcionalidades del vendedor:
- Gestión de pedidos en tiempo real
- Comunicación directa con clientes
- Seguimiento GPS de entregas
- Panel de estadísticas y métricas

Esta versión representa una aplicación completa y funcional para delivery de agua.

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,7 @@
 {
-  "name": "piatua 100%",
-  "integrations": {},
+  "name": "mi-ionic-capacitor-app",
+  "integrations": {
+    "capacitor": {}
+  },
   "type": "react-vite"
 }
