--- a/.gitignore
+++ b/.gitignore
@@ -1,85 +1,31 @@
-# Dependencies
-node_modules/
-AGUAPIATUA-1e90b4e26dbea8a062ef1fd16b85cade60b8d554/node_modules/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Build outputs
-dist/
-build/
-AGUAPIATUA-1e90b4e26dbea8a062ef1fd16b85cade60b8d554/dist/
-AGUAPIATUA-1e90b4e26dbea8a062ef1fd16b85cade60b8d554/build/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Capacitor
-android/
-ios/
-AGUAPIATUA-1e90b4e26dbea8a062ef1fd16b85cade60b8d554/android/
-AGUAPIATUA-1e90b4e26dbea8a062ef1fd16b85cade60b8d554/ios/
+# testing
+/coverage
 
-# Environment variables
-.env
-.env.local
-.env.production
+# production
+/dist
 
-# IDE/Editor files
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# OS generated files
+# misc
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+/.nx
+/.nx/cache
+/.vscode/*
+!/.vscode/extensions.json
+.idea
 
-# Logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage/
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# next.js build output
-.next
-
-# nuxt.js build output
-.nuxt
-
-# vuepress build output
-.vuepress/dist
-
-# Serverless directories
-.serverless
-
-# PWA files
-**/www/sw.js
-**/www/workbox-*.js
+# Optional eslint cache
+.eslintcache
